--- a/index.html
+++ b/index.html
@@ -7,24 +7,26 @@
 	<link rel="stylesheet" type="text/css" href="css/master.css">
 	<!-- Boostrap - Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<!--Buttons -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<!-- Responsive Navbar -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-</head>
+  </head>
 <body>
 	<!--Navigation bar-->
 	<nav class="navbar navbar-inverse navbar-design navbar-fixed-top">
 		<div class="container-fluid">
 			<div class="navbar-header" >
 				<!--Dropdown button for small screens-->
-		      	<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+		      	<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navb">
 			        <span class="icon-bar"></span>
 			        <span class="icon-bar"></span>
-			        <span class="icon-bar"></span>                        
+			        <span class="icon-bar"></span>          
 		     	</button>
 		       <a class="navbar-brand" href="#">Hamza Akiour</a>
 		   </div>
-		   <div class="collapse navbar-collapse" id="myNavbar">
+		   <div class="collapse navbar-collapse" id="navb">
 		   		<!--Items header-->
 		      	 <ul class="nav navbar-nav">
 		      	  <li><a href="#Inicio">Inicio</a></li>
@@ -33,10 +35,15 @@
 			      <li><a href="#Habilidades">Habilidades</a></li>
 			      <li><a href="#Resumen">Resumen</a></li>
 			      <li><a href="#Contacto">Contacto</a></li>
-	   	  		</ul>	
+	   	  		</ul>
+	   	  		<ul class="nav navbar-nav navbar-right">
+				    <a href="#" class="btn fa fa-linkedin"></a>
+		   	  		<a href="#" class="btn fa fa-github"></a>
+		   	  		<a href="#" class="btn fa fa-facebook"></a>
+			     </ul>
 	   	  </div>
 	  </div>
 	</nav>
-	<h1> Hello world!</h1>
+	 <h1>Hello world!</h1>
 </body>
 </html>
